<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">Label</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="on_boarding">OnBoarding Screen</string>
    <string name="welcome">welcome to my shoe store</string>
    <string name="next">Next</string>
    <string name="instruction_screen">Instruction Screen</string>
    <string name="instruction_continue">please click continue to go to Shoe Store</string>
    <string name="continue_text">Continue</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="name_hint">please enter shoe name</string>
    <string name="company">Company</string>
    <string name="company_hint">please enter shoe company</string>
    <string name="size">Size</string>
    <string name="size_hint">please enter shoe size</string>
    <string name="description">Description</string>
    <string name="description_hint">please enter shoe description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="email_hint">please enter shoe email</string>
    <string name="password_hint">please enter shoe password</string>
    <string name="log_out">LogOut</string>
</resources>
