<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.OnBoardingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/onBoardingText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/on_boarding"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/onBoardingText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/onBoardingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</layout>
